--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
-
 /* Your CSS Code here. */
+.holder
+{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.item
+{
+  width: 300px;
+  height: 300px;
+  background-color: orange;
+  margin-top: 10px;
+}
